welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:3: error: reassignment to val
	if (a=b) {c = 4*a}
             ^